perbaiki bug link ke dapurdia

--- a/dapurdia-details.html
+++ b/dapurdia-details.html
@@ -205,7 +205,7 @@
 
               <div class="project-website">
                 <i class="bi bi-link-45deg"></i>
-                <a href="dapurdia.netlify.app" target="_blank">dapurdia.netlify.app</a>
+                <a href="https://dapurdia.netlify.app" target="_blank">dapurdia.netlify.app</a>
               </div>
 
               <div class="project-overview">
