--- a/dapurdia-details.html
+++ b/dapurdia-details.html
@@ -267,7 +267,7 @@
               </div>
 
               <div class="cta-buttons" data-aos="fade-up" data-aos-delay="400">
-                <a href="dapurdia.netlify.app" target="_blank" class="btn-view-project">View Live Project</a>
+                <a href="https://dapurdia.netlify.app" target="_blank" class="btn-view-project">View Live Project</a>
                 <a href="index.html#portfolio" class="btn-next-project">Next Project <i class="bi bi-arrow-right"></i></a>
               </div>
             </div>
