--- a/staff-purchasing.html
+++ b/staff-purchasing.html
@@ -71,12 +71,12 @@
 
 
         <ul>
-          <li><a href="#hero">Beranda</a></li>
-          <li><a href="#about">Tentang Saya</a></li>
-          <li><a href="#resume">Pendidikan & Pengalaman</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#services">Layanan</a></li>
-          <li><a href="#contact">Kontak</a></li>
+          <li><a href="index.html#hero">Beranda</a></li>
+          <li><a href="index.html#about">Tentang Saya</a></li>
+          <li><a href="index.html#resume">Pendidikan & Pengalaman</a></li>
+          <li><a href="index.html#portfolio">Portfolio</a></li>
+          <li><a href="index.html#services">Layanan</a></li>
+          <li><a href="index.html#contact">Kontak</a></li>
         </ul>
 
 
